--- a/src/app/Modules/news/news.component.html
+++ b/src/app/Modules/news/news.component.html
@@ -17,8 +17,8 @@
             and are always confident that your order will be delivered at the right time to the right place.</p>
         <app-banners></app-banners>
         <div class="container-news__list">
-            <ul class="list__ul">
-                <li *ngFor="let item of collection | paginate: { itemsPerPage: 4, currentPage: p }">
+            <ul class="list__ul" *ngIf="newsData|async as news">
+                <li *ngFor="let item of news | paginate: { itemsPerPage: 4, currentPage: p }">
                     <div class="container__info">
                         <div class="container__date">
                             {{item.date}}
