--- a/src/app/Modules/news/news.component.scss
+++ b/src/app/Modules/news/news.component.scss
@@ -2,10 +2,12 @@
 @import "../../styles/_mixins.scss";
 
 .wrapper-news {
-    width: 100%;
+    width: 144rem;
     margin: 1.5rem auto 0 auto;
 }
 .container-news {
+    max-width: 100%;
+
     &__line {
         width: 78%;
         margin: 0 20% 2.8rem 12%;
@@ -110,6 +112,11 @@
         border: 0px solid $color_lightgrey;
     }
 }
+@media (max-width: 1460px) {
+    .wrapper-news {
+        width: 100%;
+    }
+}
 @media (max-width: 946px) {
     .container-news {
         &__text,
@@ -149,7 +156,7 @@
 @media (max-width: 500px) {
     .container-news {
         &__line {
-            width: 95%;
+            width: 90%;
             margin: 0 5% 0 $pt_2rem;
         }
         &__path {
@@ -157,6 +164,9 @@
         }
         &__title {
             margin: 1.6rem 0 2.2rem $pt_2rem;
+            font-weight: 700;
+            font-size: 3.6rem;
+            line-height: 110%;
         }
         &__text {
             margin: 2.2rem 0 4rem $pt_2rem;
@@ -177,6 +187,12 @@
 }
 @media (max-width: 450px) {
     .wrapper-news {
-        margin-top: 8rem;
+        margin-top: 6.4rem;
+    }
+    .container__home {
+        margin-right: $pw_1-5rem;
+    }
+    .container__angle {
+        margin-right: $pw_1-5rem;
     }
 }
