--- a/src/app/Modules/news/newsarticle/newsarticle.component.scss
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.scss
@@ -2,9 +2,11 @@
 @import "../../../styles/_mixins.scss";
 
 .wrapper-newsarticle {
-    margin: 1.7rem 0 3rem 0;
+    margin: 0 auto;
+    width: 144rem;
 }
 .container-newsarticle {
+    max-width: 100%;
     &__line {
         margin: 0 10% 0 12%;
         background: $color_darkgrey;
@@ -65,6 +67,11 @@
     @include font(Montserrat, normal, normal, 1.4rem, 150%, 0em, $color_lightdarkgrey);
     display: none;
 }
+@media (max-width: 1460px) {
+    .wrapper-newsarticle {
+        width: 100%;
+    }
+}
 @media (max-width: 968px) {
     .container-newsarticle {
         &__text,
@@ -117,6 +124,8 @@
         &__title {
             margin: 1.6rem 0 2rem $pt_2rem;
             font-size: 3.6rem;
+            font-weight: 700;
+            line-height: 110%;
         }
         &__text {
             margin: 2.2rem 0 2.9rem $pt_2rem;
@@ -139,12 +148,16 @@
 }
 @media (max-width: 450px) {
     .wrapper-newsarticle {
-        margin-top: 8rem;
+        margin-top: 6.4rem;
     }
     .container__new {
         display: block;
     }
     .container__news {
         display: none;
+    }
+    .container__angle,
+    .container__home {
+        margin-right: $pw_1-5rem;
     }
 }
