--- a/src/app/Modules/search/search.component.scss
+++ b/src/app/Modules/search/search.component.scss
@@ -1,11 +1,12 @@
 @import "../../styles/_variables.scss";
 @import "../../styles/_mixins.scss";
 .wrapper-search {
-    margin: 0 6% 0 7%;
+    margin: 0 auto;
+    width: 144rem;
 }
 .container-search {
-    width: 90%;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0 10.5% 3.5rem 11.5%;
     &__line {
         background: $color_darkgrey;
         opacity: 0.2;
@@ -64,24 +65,28 @@
         }
     }
 }
-@media (max-width: 886px) {
+@media (max-width: 1460px) {
     .wrapper-search {
+        width: 100%;
+    }
+}
+@media (max-width: 886px) {
+    .container-search {
         margin: 0 6% 0 4%;
     }
 }
 @media (max-width: 500px) {
     .wrapper-search {
-        margin: 0 2rem 0 2rem;
+        width: 90%;
+        margin: 0 2rem 0 0;
     }
     .container-search {
         width: 100%;
     }
 }
 @media (max-width: 450px) {
-    .wrapper-search {
-        margin: 8rem 2rem 0 2rem;
-    }
     .container-search {
+        margin: 8rem 2rem 0 2rem;
         &__titles {
             margin: 5rem 0 2.6rem 0;
         }
