--- a/src/app/Modules/news/newsarticle/newsarticle.component.html
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.html
@@ -18,10 +18,10 @@
             <div class="container__new">New delivery meth...</div>
         </div>
         <div class="container-newsarticle__title">New delivery method</div>
-        <p class="container-newsarticle__text">For several years now, our company has been delighting customers with the
-            delivery of
-            flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
-            are always confident that your order will be delivered at the right time to the right place.</p>
+        <div>
+            <p class="container-newsarticle__text">{{text}}
+            </p>
+        </div>
         <div class="container-newsarticle__img-delivery">
             <img id="imgDelivery" src="../../../../assets/img-news/image 258.jpg" alt="delivery">
         </div>
