--- a/src/app/Modules/contacts/error-form/error.component.html
+++ b/src/app/Modules/contacts/error-form/error.component.html
@@ -7,3 +7,6 @@
 <span class="container__error" *ngIf="formControlItem.errors?.['pattern']">Invalid value for this field </span><img
     class="alert-name" *ngIf="formControlItem.touched && formControlItem.errors?.['pattern']"
     src="../../../../assets/img-registration/alert-circle.png">
+<span class="container__error" *ngIf="formControlItem.errors?.['maxlength']">This field is too long </span><img
+    class="alert-name" *ngIf="formControlItem.touched && formControlItem.errors?.['maxlength']"
+    src="../../../../assets/img-registration/alert-circle.png">
