--- a/src/app/Modules/registration/error-form/error.component.html
+++ b/src/app/Modules/registration/error-form/error.component.html
@@ -10,3 +10,6 @@
 <span class="container__error" *ngIf="formControlItem.touched && formControlItem.errors?.['email']">This email is
     invalid</span><img class="alert-name" *ngIf="formControlItem.touched && formControlItem.errors?.['email']"
     src="../../../../assets/img-registration/alert-circle.png">
+<span class="container__error" *ngIf="formControlItem.errors?.['maxlength']">This field is too long </span><img
+    class="alert-name" *ngIf="formControlItem.touched && formControlItem.errors?.['maxlength']"
+    src="../../../../assets/img-registration/alert-circle.png">
