--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,18 +37,19 @@
                         [ngClass]="{'active': !isMenu||urlRegistration}" routerLinkActive="active"
                         [routerLinkActiveOptions]="{exact:true}"></a>
                     <ul class="user" [hidden]="isMenu">
-                        <li class="user__li user__sign" routerLink="/registration"><a class="user__text"
-                                routerLink="/registration" routerLinkActive="active"
+                        <li class="user__li user__sign" *ngIf="!isLoggedIn" routerLink="/registration"><a
+                                class="user__text" routerLink="/registration" routerLinkActive="active"
                                 [routerLinkActiveOptions]="{exact:true}" (click)='toggleDisplays()'>SIGN IN</a></li>
-                        <li class=" user__li user__li-1">
+                        <li class=" user__li user__li-1" *ngIf="isLoggedIn">
                             <a>
                                 <span class="user__text">MY ORDERS</span>
                                 <p class="user__number"> <span class="user__numb">10</span></p>
                             </a>
                         </li>
-                        <li class=" user__li user__li-2"><a href="" class="user__text">MANAGE MY ACCOUNT</a></li>
+                        <li class=" user__li user__li-2" *ngIf="isLoggedIn"><a href="" class="user__text">MANAGE MY
+                                ACCOUNT</a></li>
                         <div class="line"></div>
-                        <li class=" user__li user__li-3"><a href="" class="user__text">LOG OUT</a></li>
+                        <li class=" user__li user__li-3"><a (click)="logout()" class="user__text">LOG OUT</a></li>
                     </ul>
                 </li>
             </div>
