--- a/src/app/Modules/registration/registration.component.scss
+++ b/src/app/Modules/registration/registration.component.scss
@@ -51,6 +51,13 @@
     padding-top: $pw_1-5rem;
     @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_pink);
 }
+.container__link:hover {
+text-decoration:underline;
+}
+.container__link:active {
+  color:$color_red;
+  padding-top: 1.6rem;
+}
 .container__firstname,
 .container__lastname,
 .container__email,
