--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@
     border: 0;
     font-family: "Montserrat", sans-serif;
     font-size: 10px;
-    cursor: url("./assets/img-home/cursor.png"), default;
 }
 *,
 *:before,
@@ -23,6 +22,7 @@
 a:focus,
 a:active {
     outline: none;
+    cursor:pointer;
 }
 
 nav,
@@ -52,13 +52,7 @@ input::-ms-clear {
 }
 
 button {
-    cursor: url("./assets/img-home/cursor-button.png"), default;
-    img {
-        cursor: url("./assets/img-home/cursor-button.png"), default;
-    }
-    p {
-        cursor: url("./assets/img-home/cursor-button.png"), default;
-    }
+    cursor: pointer;
 }
 button::-moz-focus-inner {
     padding: 0;
@@ -70,6 +64,7 @@ a:visited {
 }
 a:hover {
     text-decoration: none;
+    cursor: pointer;
 }
 ul li {
     list-style: none;
@@ -86,5 +81,4 @@ h6,
 p {
     font-size: inherit;
     font-weight: 400;
-    cursor: url("./assets/img-home/cursor-text.png"), default;
 }
